<?xml version="1.0"?>
<package format="3">
  <name>fast_gicp</name>
  <version>0.0.0</version>
  <description>A collection of fast point cloud registration implementations</description>

  <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/SMRT-AIST/fast_gicp</url>
  <url type="repository">https://github.com/SMRT-AIST/fast_gicp</url>
  <url type="bugtracker">https://github.com/SMRT-AIST/fast_gicp/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <depend>autoware_localization_util</depend>
  <depend>autoware_internal_debug_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
